--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,42 @@
 spring:
-  application:
-    name: springboot-gradle
+    application:
+        name: springboot-gradle
+    #  datasource:
+    #    driver-class-name: org.postgresql.Driver
+    #    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}${DB_OPTIONS:}
+    #    username: ${DB_USER_NAME}
+    #    password: ${DB_PASSWORD}
+    #    properties:
+    #      charSet: UTF-8
+    #    hikari:
+    #      minimumIdle: 2
+    #      maximumPoolSize: 10
+    #      idleTimeout: 10000
+    #      poolName: {to-be-defined}HikariCP
+    #      maxLifetime: 7200000
+    #      connectionTimeout: 30000
+    #  jpa:
+    #    properties:
+    #      hibernate:
+    #        jdbc:
+    #          lob:
+    #            # silence the 'wall-of-text' - unnecessary exception throw about blob types
+    #            non_contextual_creation: true
+---
+server:
+    port: 8080
+    shutdown: "graceful"
+---
+# If you use a database then uncomment the `group:, readiness: and include: "db"` lines in the health probes and uncomment the datasource section
+management:
+    endpoint:
+        health:
+            show-details: "always"
+            # group:
+            #  readiness:
+            #   include: "db"
+    endpoints:
+        web:
+            base-path: /
+            exposure:
+                include: health, info, prometheus
