--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,6 +49,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Grant execute permission for Gradle
+        run: chmod +x gradlew   #  FIX tại đây
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -83,6 +86,9 @@ jobs:
         with:
           name: app-jar
           path: .
+
+      - name: Grant execute permission for Gradle
+        run: chmod +x gradlew   #  nếu bạn build Docker dùng gradlew, thêm tại đây
 
       - name: Build Docker image
         run: |
