--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,10 @@ ext {
 	set('springGrpcVersion', "0.12.0")
 }
 
+tasks.named("generateMetadataFileForGprPublication") {
+    suppressedValidationErrors.add("dependencies-without-versions")
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
@@ -60,6 +64,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation platform("org.springframework.grpc:spring-grpc-dependencies:${springGrpcVersion}")
 	implementation 'io.grpc:grpc-services'
 	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
 	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
