--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -70,7 +70,7 @@ jobs:
           GPR_KEY: ${{ secrets.GITHUB_TOKEN }}
         run: ./gradlew publish
 
-  publish-ghcr:
+    publish-ghcr:
     needs: build
     runs-on: ubuntu-latest
 
@@ -88,7 +88,7 @@ jobs:
           path: .
 
       - name: Grant execute permission for Gradle
-        run: chmod +x gradlew   #  nếu bạn build Docker dùng gradlew, thêm tại đây
+        run: chmod +x gradlew
 
       - name: Build Docker image
         run: |
@@ -99,4 +99,44 @@ jobs:
 
       - name: Push Docker image
         run: docker push $IMAGE
+
+      - name: Cleanup old GHCR tags (keep last 5)
+        env:
+          GHCR_USER: ${{ github.actor }}
+          GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          IMAGE_NAME: springboot-gradle
+          KEEP_COUNT: 5
+        run: |
+          set -e
+
+          echo "Fetching GHCR tags..."
+          PAGE=1
+          PAGE_SIZE=100
+          ALL_TAGS_JSON="[]"
+
+          while :; do
+            RESP=$(curl -s -H "Authorization: Bearer $GHCR_TOKEN" \
+                        "https://ghcr.io/v2/${{ github.repository }}/$IMAGE_NAME/tags/list?n=$PAGE_SIZE&page=$PAGE")
+            PAGE_RESULTS=$(echo "$RESP" | jq '.tags // []')
+            ALL_TAGS_JSON=$(jq -s '.[0] + .[1]' <(echo "$ALL_TAGS_JSON") <(echo "$PAGE_RESULTS"))
+            NEXT=$(echo "$RESP" | jq '.next')
+            if [ "$NEXT" = "null" ] || [ -z "$NEXT" ]; then
+              break
+            fi
+            PAGE=$((PAGE+1))
+          done
+
+          TAGS_SORTED=$(echo "$ALL_TAGS_JSON" | jq -r 'sort | reverse')
+          DELETE=$(echo "$TAGS_SORTED" | jq -r --argjson k "$KEEP_COUNT" '.[ $k: ] | .[]')
+
+          if [ -n "$DELETE" ]; then
+            echo "Deleting old tags..."
+            for T in $DELETE; do
+              echo "Deleting: $T"
+              curl -s -X DELETE -H "Authorization: Bearer $GHCR_TOKEN" \
+                   "https://ghcr.io/v2/${{ github.repository }}/$IMAGE_NAME/manifests/$T"
+            done
+          else
+            echo "No old tags to delete."
+          fi
 
