--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,139 +4,134 @@
 # documentation.
 # This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
-
 name: Build & Publish
 
 on:
-    push:
-        paths:
-            - "src/**"
-            - "build.gradle"
-            - "settings.gradle"
-            - ".github/workflows/publish.yml"
-        branches: [ "main" ]
+  push:
+    paths:
+      - "src/**"
+      - "build.gradle"
+      - "settings.gradle"
+      - ".github/workflows/publish.yml"
+    branches: ["main"]
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v4
 
-        steps:
-            -   name: Checkout source
-                uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 17
 
-            -   name: Set up JDK 17
-                uses: actions/setup-java@v4
-                with:
-                    distribution: temurin
-                    java-version: 17
+      - name: Grant execute permission for Gradle
+        run: chmod +x gradlew
 
-            -   name: Grant execute permission for Gradle
-                run: chmod +x gradlew
+      - name: Build JAR
+        run: ./gradlew clean build -x test
 
-            -   name: Build JAR
-                run: ./gradlew clean build -x test
+      - name: Upload artifact (JAR)
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-jar
+          path: build/libs/*.jar
 
-            -   name: Upload artifact (JAR)
-                uses: actions/upload-artifact@v4
-                with:
-                    name: app-jar
-                    path: build/libs/*.jar
+  publish-maven:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-    publish-maven:
-        needs: build
-        runs-on: ubuntu-latest
+      - name: Grant execute permission for Gradle
+        run: chmod +x gradlew
 
-        steps:
-            -   uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 17
 
-            -   name: Grant execute permission for Gradle
-                run: chmod +x gradlew   #  FIX tại đây
+      - name: Download JAR artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: app-jar
+          path: build/libs
 
-            -   name: Set up JDK 17
-                uses: actions/setup-java@v4
-                with:
-                    distribution: temurin
-                    java-version: 17
+      - name: Publish to GitHub Packages
+        env:
+          GPR_USER: ${{ github.actor }}
+          GPR_KEY: ${{ secrets.GITHUB_TOKEN }}
+        run: ./gradlew publish
 
-            -   name: Download JAR artifact
-                uses: actions/download-artifact@v4
-                with:
-                    name: app-jar
-                    path: build/libs
+  publish-ghcr:  # <- Cùng mức với publish-maven, không thụt vào
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-            -   name: Publish to GitHub Packages
-                env:
-                    GPR_USER: ${{ github.actor }}
-                    GPR_KEY: ${{ secrets.GITHUB_TOKEN }}
-                run: ./gradlew publish
+      - name: Log in to GHCR
+        run: |
+          echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-        publish-ghcr:
-            needs: build
-            runs-on: ubuntu-latest
+      - name: Download artifact (JAR)
+        uses: actions/download-artifact@v4
+        with:
+          name: app-jar
+          path: .
 
-            steps:
-                -   uses: actions/checkout@v4
+      - name: Grant execute permission for Gradle
+        run: chmod +x gradlew
 
-                -   name: Log in to GHCR
-                    run: |
-                        echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Build Docker image
+        run: |
+          TAG=$(date +'%d-%m-%Y_%H-%M-%S')
+          IMAGE=ghcr.io/${{ github.repository }}/springboot-gradle:$TAG
+          echo "IMAGE=$IMAGE" >> $GITHUB_ENV
+          docker build -t $IMAGE .
 
-                -   name: Download artifact (JAR)
-                    uses: actions/download-artifact@v4
-                    with:
-                        name: app-jar
-                        path: .
+      - name: Push Docker image
+        run: docker push $IMAGE
 
-                -   name: Grant execute permission for Gradle
-                    run: chmod +x gradlew
+      - name: Cleanup old GHCR tags (keep last 5)
+        env:
+          GHCR_USER: ${{ github.actor }}
+          GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          IMAGE_NAME: springboot-gradle
+          KEEP_COUNT: 5
+        run: |
+          set -e
+          echo "Fetching GHCR tags..."
+          PAGE=1
+          PAGE_SIZE=100
+          ALL_TAGS_JSON="[]"
 
-                -   name: Build Docker image
-                    run: |
-                        TAG=$(date +'%d-%m-%Y_%H-%M-%S')
-                        IMAGE=ghcr.io/${{ github.repository }}/springboot-gradle:$TAG
-                        echo "IMAGE=$IMAGE" >> $GITHUB_ENV
-                        docker build -t $IMAGE .
+          while :; do
+            RESP=$(curl -s -H "Authorization: Bearer $GHCR_TOKEN" \
+                        "https://ghcr.io/v2/${{ github.repository }}/$IMAGE_NAME/tags/list?n=$PAGE_SIZE&page=$PAGE")
+            PAGE_RESULTS=$(echo "$RESP" | jq '.tags // []')
+            ALL_TAGS_JSON=$(jq -s '.[0] + .[1]' <(echo "$ALL_TAGS_JSON") <(echo "$PAGE_RESULTS"))
+            NEXT=$(echo "$RESP" | jq '.next')
+            if [ "$NEXT" = "null" ] || [ -z "$NEXT" ]; then
+              break
+            fi
+            PAGE=$((PAGE+1))
+          done
 
-                -   name: Push Docker image
-                    run: docker push $IMAGE
+          TAGS_SORTED=$(echo "$ALL_TAGS_JSON" | jq -r 'sort | reverse')
+          DELETE=$(echo "$TAGS_SORTED" | jq -r --argjson k "$KEEP_COUNT" '.[ $k: ] | .[]')
 
-                -   name: Cleanup old GHCR tags (keep last 5)
-                    env:
-                        GHCR_USER: ${{ github.actor }}
-                        GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                        IMAGE_NAME: springboot-gradle
-                        KEEP_COUNT: 5
-                    run: |
-                        set -e
-                        
-                        echo "Fetching GHCR tags..."
-                        PAGE=1
-                        PAGE_SIZE=100
-                        ALL_TAGS_JSON="[]"
-                        
-                        while :; do
-                          RESP=$(curl -s -H "Authorization: Bearer $GHCR_TOKEN" \
-                                      "https://ghcr.io/v2/${{ github.repository }}/$IMAGE_NAME/tags/list?n=$PAGE_SIZE&page=$PAGE")
-                          PAGE_RESULTS=$(echo "$RESP" | jq '.tags // []')
-                          ALL_TAGS_JSON=$(jq -s '.[0] + .[1]' <(echo "$ALL_TAGS_JSON") <(echo "$PAGE_RESULTS"))
-                          NEXT=$(echo "$RESP" | jq '.next')
-                          if [ "$NEXT" = "null" ] || [ -z "$NEXT" ]; then
-                            break
-                          fi
-                          PAGE=$((PAGE+1))
-                        done
-                        
-                        TAGS_SORTED=$(echo "$ALL_TAGS_JSON" | jq -r 'sort | reverse')
-                        DELETE=$(echo "$TAGS_SORTED" | jq -r --argjson k "$KEEP_COUNT" '.[ $k: ] | .[]')
-                        
-                        if [ -n "$DELETE" ]; then
-                          echo "Deleting old tags..."
-                          for T in $DELETE; do
-                            echo "Deleting: $T"
-                            curl -s -X DELETE -H "Authorization: Bearer $GHCR_TOKEN" \
-                                 "https://ghcr.io/v2/${{ github.repository }}/$IMAGE_NAME/manifests/$T"
-                          done
-                        else
-                          echo "No old tags to delete."
-                        fi
+          if [ -n "$DELETE" ]; then
+            echo "Deleting old tags..."
+            for T in $DELETE; do
+              echo "Deleting: $T"
+              curl -s -X DELETE -H "Authorization: Bearer $GHCR_TOKEN" \
+                   "https://ghcr.io/v2/${{ github.repository }}/$IMAGE_NAME/manifests/$T"
+            done
+          else
+            echo "No old tags to delete."
+          fi
 
