--- a/build.gradle
+++ b/build.gradle
@@ -3,45 +3,16 @@ plugins {
     id 'org.springframework.boot' version '3.5.7'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'com.google.protobuf' version '0.9.4'
-    id("maven-publish")
+    id 'maven-publish'
 }
 
 group = 'com.learning'
 version = '0.0.1-SNAPSHOT'
 description = 'Build Dockerfile Optimization Spring Gradle'
 
-publishing {
-    repositories {
-        maven {
-            name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/chuvannam02/springboot-gradle")
-            credentials {
-                username = project.findProperty("gpr.user") ?: System.getenv("GPR_USER")
-                password = project.findProperty("gpr.key") ?: System.getenv("GPR_KEY")
-            }
-        }
-    }
-    publications {
-        gpr(MavenPublication) {
-            from(components.java)
-            suppressPomMetadataWarningsFor("dependencies-without-versions")
-        }
-    }
-}
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(17)
-    }
-}
-
-bootJar {
-    archiveBaseName.set('springboot-gradle')
-    archiveVersion.set('0.0.1-SNAPSHOT')
-}
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
     }
 }
 
@@ -50,13 +21,10 @@ repositories {
 }
 
 ext {
-    set('springGrpcVersion', "0.12.0")
+    set('springGrpcVersion', '0.12.0')
 }
 
-tasks.named("generateMetadataFileForGprPublication") {
-    suppressedValidationErrors.add("dependencies-without-versions")
-}
-
+// -------------------- Dependencies --------------------
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
@@ -64,13 +32,19 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+
     implementation platform("org.springframework.grpc:spring-grpc-dependencies:${springGrpcVersion}")
+    implementation 'org.springframework.grpc:spring-grpc-server-web-spring-boot-starter'
     implementation 'io.grpc:grpc-services'
+
     implementation 'io.micrometer:micrometer-tracing-bridge-brave'
     implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
-    implementation 'org.springframework.grpc:spring-grpc-server-web-spring-boot-starter'
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
     testImplementation 'org.springframework.grpc:spring-grpc-test'
@@ -84,24 +58,57 @@ dependencyManagement {
     }
 }
 
+// -------------------- Protobuf gRPC --------------------
 protobuf {
     protoc {
-        artifact = 'com.google.protobuf:protoc'
+        artifact = 'com.google.protobuf:protoc:3.24.3'
     }
     plugins {
         grpc {
-            artifact = 'io.grpc:protoc-gen-grpc-java'
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.59.0'
         }
     }
     generateProtoTasks {
         all()*.plugins {
             grpc {
-                option '@generated=omit'
+                option 'annotate_code=false'
             }
         }
     }
 }
 
+// -------------------- BootJar --------------------
+bootJar {
+    archiveBaseName.set('springboot-gradle')
+    archiveVersion.set(version)
+}
+
+// -------------------- Publishing --------------------
+publishing {
+    publications {
+        gpr(MavenPublication) {
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/chuvannam02/springboot-gradle")
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("GPR_USER")
+                password = project.findProperty("gpr.key") ?: System.getenv("GPR_KEY")
+            }
+        }
+    }
+}
+
+// Suppress metadata warnings Gradle 8+
+tasks.named("generateMetadataFileForGprPublication") {
+    suppressedValidationErrors.add("dependencies-without-versions")
+}
+
+// -------------------- Testing --------------------
 tasks.named('test') {
     useJUnitPlatform()
 }
+
