--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,16 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
     id 'com.google.protobuf' version '0.9.4'
     id 'maven-publish'
+
+    // Thêm plugin này nếu muốn chạy lệnh tay (Optional)
+    id "org.flywaydb.flyway" version "10.0.0"
+}
+
+// Cấu hình riêng cho Plugin (để nó biết đường kết nối khi chạy lệnh tay)
+flyway {
+    url = 'jdbc:postgresql://localhost:5432/my_enterprise_db'
+    user = 'postgres'
+    password = 'Huykenzj994'
 }
 
 group = 'com.learning'
@@ -44,6 +54,16 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    // 1. Flyway Core (Nhân xử lý chính)
+    implementation 'org.flywaydb:flyway-core'
+
+    // 2. Flyway PostgreSQL Support (BẮT BUỘC với Spring Boot 3+)
+    implementation 'org.flywaydb:flyway-database-postgresql'
+
+    // 3. Driver PostgreSQL (để kết nối DB)
+    runtimeOnly 'org.postgresql:postgresql'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
