--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,27 +1,34 @@
 spring:
     application:
         name: springboot-gradle
-    #  datasource:
-    #    driver-class-name: org.postgresql.Driver
-    #    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}${DB_OPTIONS:}
-    #    username: ${DB_USER_NAME}
-    #    password: ${DB_PASSWORD}
-    #    properties:
-    #      charSet: UTF-8
-    #    hikari:
-    #      minimumIdle: 2
-    #      maximumPoolSize: 10
-    #      idleTimeout: 10000
-    #      poolName: {to-be-defined}HikariCP
-    #      maxLifetime: 7200000
-    #      connectionTimeout: 30000
-    #  jpa:
-    #    properties:
-    #      hibernate:
-    #        jdbc:
-    #          lob:
-    #            # silence the 'wall-of-text' - unnecessary exception throw about blob types
-    #            non_contextual_creation: true
+    datasource:
+        driver-class-name: org.postgresql.Driver
+        url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:my_enterprise_db}${DB_OPTIONS:}
+        username: ${DB_USER_NAME:postgres}
+        password: ${DB_PASSWORD:Huykenzj994}
+        properties:
+            charSet: UTF-8
+        hikari:
+            minimumIdle: 2
+            maximumPoolSize: 10
+            idleTimeout: 10000
+            poolName: HikariCP
+            maxLifetime: 7200000
+            connectionTimeout: 30000
+    jpa:
+        hibernate:
+            ddl-auto: validate # Tắt tự động tạo bảng của Hibernate
+            # Tắt log cảnh báo pooling ồn ào này đi (vì mình biết Hikari lo vụ này rồi)
+            temp:
+                use_jdbc_metadata_defaults: false
+            jdbc:
+                lob:
+                    # silence the 'wall-of-text' - unnecessary exception throw about blob types
+                    non_contextual_creation: true
+    flyway:
+        enabled: true
+        locations: classpath:db/migration # Đường dẫn mặc định
+        baseline-on-migrate: true # Tự động tạo bảng history nếu DB đã có dữ liệu cũ
 ---
 server:
     port: 8080
